# audio-plugin-coder

.claude/: launch.json
.github/workflows/: build-release.yml
plugins/SIDTrance/: CMakeLists.txt  status.json
plugins/SIDTrance/.ideas/: architecture.md  creative-brief.md  parameter-spec.md  plan.md
plugins/SIDTrance/Design/: v1-style-guide.md  v1-ui-spec.md
plugins/SIDTrance/Documentation/: USER_MANUAL.md
plugins/SIDTrance/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  VisageControls.h
plugins/VAZAutopan/: CMakeLists.txt
plugins/VAZAutopan/Source/: ParameterIDs.hpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/VAZAutopan/Source/ui/public/: index.html
plugins/VAZChorus/: CMakeLists.txt
plugins/VAZChorus/.ideas/: chorus-ghidra-re.md
plugins/VAZChorus/Source/: ParameterIDs.hpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/VAZChorus/Source/ui/public/: index.html
plugins/VAZChorus/Source/ui/public/js/: index.js
plugins/VAZClone/: BUGS.md  CMakeLists.txt  DSP_DIFFERENCES.md  GHIDRA_GAP_ANALYSIS.md  GUI_DIFFERENCES.md  MISSING_FEATURES.md  TODO.md  status.json
plugins/VAZClone/.ideas/: architecture.md  creative-brief.md  full-audit-2026-06-12.md  ghidra-gap-analysis.md  parameter-spec.md  parity-audit.md  plan.md  reimpl-roadmap.md  vaz-full-gap-inventory.md  voice-render-re.md
plugins/VAZClone/Design/: v1-style-guide.md  v1-test.html  v1-ui-spec.md
plugins/VAZClone/Source/: ParameterIDs.hpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Synth.h  SynthVoice.h  VAZEnvTables.h  VAZInitTemplate.h  VAZTypeA.h  VAZTypeATables.h  VAZTypeB.h  VAZTypeC.h  VAZTypeD.h  VAZTypeDTables.h  VAZTypeK.h  VAZTypeKTables.h  VAZTypeR.h  VAZTypeRTables.h  render_main.cpp
plugins/VAZClone/Source/ui/public/: index.html
plugins/VAZClone/Source/ui/public/js/: index.js
plugins/VAZDecimator/: CMakeLists.txt
plugins/VAZDecimator/Source/: ParameterIDs.hpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/VAZDecimator/Source/ui/public/: index.html
plugins/VAZDelay/: CMakeLists.txt
plugins/VAZDelay/Source/: ParameterIDs.hpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/VAZDelay/Source/ui/public/: index.html
plugins/VAZFlanger/: CMakeLists.txt
plugins/VAZFlanger/.ideas/: flanger-ghidra-re.md
plugins/VAZFlanger/Source/: ParameterIDs.hpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/VAZFlanger/Source/ui/public/: index.html
plugins/VAZPhaser/: CMakeLists.txt
plugins/VAZPhaser/.ideas/: phaser-ghidra-re.md
plugins/VAZPhaser/Source/: ParameterIDs.hpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/VAZPhaser/Source/ui/public/: index.html
plugins/VAZReverb/: CMakeLists.txt
plugins/VAZReverb/Source/: ParameterIDs.hpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/VAZReverb/Source/ui/public/: index.html
tools/: build_test.bat  build_testb.bat  dump_vaz_tables.py  find-callers.py  find-fx-classes.py  run-ghidra-env.bat  test_env.cpp  test_typeb.cpp  test_typec.cpp  v2p_inspect.py  v2p_trace.py  v2p_trace2.py  vaz_env.c  vaz_envcls.c  vaz_oscread.c  vaz_v2p_format.md
tools/abtest/: analyze.py  env_dr.py  env_response.py  filter_response.py  osc_response.py
tools/abtest/midi/: longnote.mid  shortnote.mid
tools/ghidra_scripts/: DecompForce.java  FindLoader.java  LoaderDeep.java
tools/vaz_tables/: curve_0x5445e0.txt  wave_0x6db2c0.txt  wave_0x6dc2c0.txt  wave_0x6dd2c0.txt  wave_0x6de2c0.txt
